fix ui spacing

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -31,7 +31,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   width: 450px
 }
 
-.action-button {
+.action-button-section {
   margin-bottom: 5px;
 }
 
